css/style.css
/* ... */
@media (max-width: 480px) {
  .cipher {
    font-size: 1rem;
  }
}

.arrow {
  font-size: 2rem;
  color: #454851;
  z-index: 3;
}
.arrow:hover {
  cursor: pointer;
  color: #686d7a;
}

/* ==  Project Section  == */
.project-section {
  width: 100%;
  height: auto;
  padding: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  -webkit-justify-content: space-around;
      -ms-flex-pack: distribute;
          justify-content: space-around;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
      -ms-flex-align: start;
          align-items: flex-start;
}

.project {
  max-width: 400px;
  min-width: 300px;
  margin: 1em;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  /* ----------- Laptop Screens ----------- */
}

.project:hover .underbar {
width: 100%;
}

.project-title {
  font-size: 1.5rem;
  width: 100%;
}
.project-title h3 {
  font-family: 'Abel', sans-serif;
  text-align: left;
  padding: 0.3em;
  margin: 0.1em auto;
}
.project-title .underbar {
  width: 0;
  height: 0;
  border: none;
  margin: 0;
  border-top: 0.1em solid #454851;
  -webkit-transition: width 300ms ease;
  transition: width 300ms ease;
}
@media only screen and (min-device-width: 320px) and (max-device-width: 736px) {
  .project-title .underbar {
    width: 100%;
  }
}

.project-image {
  width: 100%;
  height: 325px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

.project-palette {
  background-position: center;
  background-image: url("../assets/img/projects/project_project_palette.png");
}

.abstract-cityscape {
  background-position: center;
  background-image: url("../assets/img/projects/project_abstractcityscape.png");
}

.chess-ai {
  background-image: url("../assets/img/projects/project_chessai.png");
}

.code-guild {
  background-position: center;
  background-image: url("../assets/img/projects/project_codeguild.png");
}

.computer-tennis {
  background-image: url("../assets/img/projects/project_computertennis.png");
}

.heart-caller {
  background-position: top;
  background-image: url("../assets/img/projects/project_heartcaller.png");
}

.project-details {
  width: 100%;
  height: auto;
  margin: auto;
  padding: 0 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
      -ms-flex-flow: column nowrap;
          flex-flow: column nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  box-sizing: border-box;
  font-size: 1em;
  text-align: left;
  font-family: 'Pontano Sans', sans-serif;
}

.info-link {
  color: #629485;
}

.info-link:hover {
  color: #75B09C;
}

/* ==  Gallery Section  == */
.gallery-section {
  width: 100%;
  height: auto;
  font-size: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
}

.gallery-showcase {
  width: 700px;
  min-width: 300px;
  height: auto;
  margin: 0.5em 2em;
}

.gallery-embed {
  width: 100%;
  height: 50vw;
  max-height: 500px;
  min-height: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
      -ms-flex-flow: column wrap;
          flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: #EF3E36;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

.project-palette {
  background-position: center;
  background-image: url("../assets/img/projects/project_project_palette.png");
}

.abstract-cityscape {
  background-position: center;
  background-image: url("../assets/img/projects/project_abstractcityscape.png");
}

.chess-ai {
  background-image: url("../assets/img/projects/project_chessai.png");
}

.code-guild {
  background-position: center;
  background-image: url("../assets/img/projects/project_codeguild.png");
}

.computer-tennis {
  background-image: url("../assets/img/projects/project_computertennis.png");
}

.heart-caller {
  background-position: top;
  background-image: url("../assets/img/projects/project_heartcaller.png");
}
/* ... */

